--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "body-parser": "^1.19.1",
   "connect": "^3.7.0",
   "cors": "^2.8.5",
+  "express": "^4.18.1",
   "formidable": "^2.0.1",
   "fs-extra": "^10.1.0",
   "image-size": "^1.0.2",
@@ -58,6 +59,7 @@
   "@semantic-release/release-notes-generator": "^9.0.3",
   "@types/body-parser": "^1.19.2",
   "@types/cors": "^2.8.12",
+  "@types/express": "^4.17.13",
   "@types/formidable": "^2.0.5",
   "@types/fs-extra": "^9.0.13",
   "@types/jest": "^27.4.0",
