feat: add support of generating xml feed from contract

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "build:code": "tsc",
   "build:publish-client": "npm run gen:client && npm run build:client",
   "build": "npm run build:client && npm run install:client && npm run build:code",
+  "contract-types": "typechain --target web3-v1 --out-dir src/generated/typechain src/artifacts/*.json",
   "gen:client": "npx --no-install @open-rpc/generator generate -c ./open-rpc-generator-config.json",
   "build:client": "npm run gen:client && cd ./generated-client/client/typescript && npm --force install && npx --no-install tsc",
   "install:client": "npm run clean:assets; npm pack generated-client/client/typescript/ && mv *.tgz headsup-server-client.tgz && npm install --no-save headsup-server-client.tgz",
@@ -27,21 +28,33 @@
  },
  "dependencies": {
   "@erc725/erc725.js": "^0.14.4",
+  "@lukso/lsp-smart-contracts": "^0.6.2",
   "@open-rpc/client-js": "^1.6.3",
   "@open-rpc/meta-schema": "^1.14.2",
   "@open-rpc/schema-utils-js": "^1.14.3",
   "@open-rpc/server-js": "^1.9.0",
   "@open-rpc/typings": "^1.11.3",
   "@pinata/sdk": "^1.1.26",
+  "@typechain/web3-v1": "^6.0.1",
+  "bn.js": "^5.2.1",
   "body-parser": "^1.19.1",
   "connect": "^3.7.0",
   "cors": "^2.8.5",
+  "ethers": "^5.7.0",
   "express": "^4.18.1",
   "formidable": "^2.0.1",
   "fs-extra": "^10.1.0",
   "image-size": "^1.0.2",
   "postgres": "^2.0.0-beta.11",
-  "sha3": "^2.1.4"
+  "rehype-format": "^4.0.1",
+  "rehype-parse": "^8.0.4",
+  "rehype-sanitize": "^5.0.1",
+  "rehype-stringify": "^9.0.3",
+  "remark-parse": "^10.0.1",
+  "remark-rehype": "^10.1.0",
+  "sha3": "^2.1.4",
+  "unified": "^10.1.2",
+  "web3": "^1.7.5"
  },
  "devDependencies": {
   "@json-schema-tools/dereferencer": "^1.5.3",
