--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 
 {
   "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
+    "target": "ES2020",
     "lib": [
       "es2021",
-      "dom"
     ],
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "sourceMap": true,
     "allowJs": true,
     "resolveJsonModule": true,
@@ -15,5 +15,6 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck":true,
+    "allowSyntheticDefaultImports": true, // (C)
   }
 }
