--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "@open-rpc/typings": "^1.11.3",
   "@pinata/sdk": "^1.1.26",
   "@typechain/web3-v1": "^6.0.1",
+  "axios": "^0.21.4",
   "bn.js": "^5.2.1",
   "body-parser": "^1.19.1",
   "connect": "^3.7.0",
@@ -45,15 +46,16 @@
   "formidable": "^2.0.1",
   "fs-extra": "^10.1.0",
   "image-size": "^1.0.2",
+  "isomorphic-fetch": "^3.0.0",
   "postgres": "^2.0.0-beta.11",
-  "rehype-format": "^4.0.1",
-  "rehype-parse": "^8.0.4",
-  "rehype-sanitize": "^5.0.1",
-  "rehype-stringify": "^9.0.3",
-  "remark-parse": "^10.0.1",
-  "remark-rehype": "^10.1.0",
+  "rehype-format": "^3.0.0",
+  "rehype-parse": "^7.0.0",
+  "rehype-sanitize": "^4.0.0",
+  "rehype-stringify": "^8.0.0",
+  "remark-parse": "^9.0.0",
+  "remark-rehype": "^8.1.0",
   "sha3": "^2.1.4",
-  "unified": "^10.1.2",
+  "unified": "9.2.2",
   "web3": "^1.7.5"
  },
  "devDependencies": {
@@ -75,6 +77,7 @@
   "@types/express": "^4.17.13",
   "@types/formidable": "^2.0.5",
   "@types/fs-extra": "^9.0.13",
+  "@types/isomorphic-fetch": "^0.0.36",
   "@types/jest": "^27.4.0",
   "@typescript-eslint/eslint-plugin": "^4.31.2",
   "@typescript-eslint/parser": "^4.31.2",
@@ -86,6 +89,6 @@
   "rimraf": "^3.0.2",
   "source-map-support": "^0.5.19",
   "ts-jest": "^27.0.1",
-  "typescript": "^4.2.4"
+  "typescript": "^4.7.0"
  }
 }
