--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ES6",
     "lib": [
       "es2021",
     ],
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "CommonJS",
+    "moduleResolution": "Node",
     "sourceMap": true,
     "allowJs": true,
     "resolveJsonModule": true,
