--- a/cfn/production-launch-params.json
+++ b/cfn/production-launch-params.json
@@ -13,7 +13,7 @@
   },
   {
     "ParameterKey": "DomainName",
-    "ParameterValue": "nft-api.swapp.land"
+    "ParameterValue": "api.feedhead.xyz"
   },
   {
     "ParameterKey": "HostedZoneId",
