fix: try adjusting feed instance to fix eb

--- a/cfn/production-launch-params.json
+++ b/cfn/production-launch-params.json
@@ -9,7 +9,7 @@
   },
   {
     "ParameterKey": "InstanceType",
-    "ParameterValue": "a1.medium"
+    "ParameterValue": "t3.small"
   },
   {
     "ParameterKey": "DomainName",
