fix: change instance type

--- a/cfn/production-launch-params.json
+++ b/cfn/production-launch-params.json
@@ -9,7 +9,7 @@
   },
   {
     "ParameterKey": "InstanceType",
-    "ParameterValue": "t3.small"
+    "ParameterValue": "t4g.medium"
   },
   {
     "ParameterKey": "DomainName",
